// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reservation service test suite Add table to service test suite Should add table to service 1`] = `
ReservationService {
  "freeTables": Set {
    DinnerTableDTO {
      "seats": 2,
      "tableId": 1,
    },
    DinnerTableDTO {
      "seats": 5,
      "tableId": 2,
    },
    DinnerTableDTO {
      "seats": 7,
      "tableId": 3,
    },
  },
  "takenTables": Set {},
}
`;

exports[`Reservation service test suite Set table to available test suite Should find table by id and set to available 1`] = `
ReservationService {
  "freeTables": Set {
    DinnerTableDTO {
      "seats": 7,
      "tableId": 4,
    },
  },
  "takenTables": Set {
    DinnerTableDTO {
      "seats": 2,
      "tableId": 1,
    },
    DinnerTableDTO {
      "seats": 5,
      "tableId": 2,
    },
    DinnerTableDTO {
      "seats": 7,
      "tableId": 3,
    },
    DinnerTableDTO {
      "seats": 4,
      "tableId": 5,
    },
    DinnerTableDTO {
      "seats": 6,
      "tableId": 6,
    },
    DinnerTableDTO {
      "seats": 2,
      "tableId": 7,
    },
    DinnerTableDTO {
      "seats": 8,
      "tableId": 8,
    },
    DinnerTableDTO {
      "seats": 4,
      "tableId": 9,
    },
    DinnerTableDTO {
      "seats": 6,
      "tableId": 10,
    },
  },
}
`;

exports[`Reservation service test suite Should add table to taken and remove from freeTabeles 1`] = `
ReservationService {
  "freeTables": Set {
    DinnerTableDTO {
      "seats": 5,
      "tableId": 2,
    },
  },
  "takenTables": Set {
    DinnerTableDTO {
      "seats": 2,
      "tableId": 1,
    },
  },
}
`;
